--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -5,3 +5,13 @@
     justify-content: center;
     align-items: center;
 }
+.hambergerImage{
+    width: 50%;
+    height: 100%;
+}
+.hamgerContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
