--- a/styles/slides.module.css
+++ b/styles/slides.module.css
@@ -4,3 +4,7 @@
     align-items: center;
     margin-top: 40px;
 }
+.sliderLeft, .sliderRight{
+    border: none;
+    background-color: transparent;
+}
