--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -4,14 +4,38 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 40px;
 }
-.hambergerImage{
+.category{
+    font-size: 12px;
+}
+.heart{
+    font-size: 10px;
+}
+.hambergerImage, .heartImage{
     width: 50%;
     height: 100%;
 }
-.hamgerContainer{
+.hamgerContainer, .heartContainer{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.logoImage{
+    height: 100%;
+    width: 3%;
+}
+.searchContainer{
+        width: 100%;
+        max-width: 400px; /* 필요에 따라 최대 너비 설정 */
+        margin: 0 auto; /* 화면 중앙 정렬을 위한 예시 */
+}
+
+.search{
+    width: 400px;
+  padding: 10px; /* 내부 여백 설정 */
+  border: 1px solid #ccc; /* 테두리 스타일 설정 */
+  border-radius: 5px; /* 모서리를 둥글게 만들기 */
+  font-size: 10px;
 }
